--- a/tables.html
+++ b/tables.html
@@ -79,6 +79,6 @@
         </tr>
     </table>
     <br>
-    <a href="./assesment2.html">Go back</a>
+    <a href="./index.html">Go back</a>
 </body>
 </html>
