--- a/tables.html
+++ b/tables.html
@@ -79,6 +79,21 @@
         </tr>
     </table>
     <br>
+    <table border="1" align="center">
+        <tr>
+            <th bgcolor="grey">Name</th>
+            <td>John</td>
+            <td bgcolor="grey">Nick</td>
+            <td>Tim</td>
+        </tr>
+        <tr>
+            <th>Age</th>
+            <td bgcolor="grey">30</td>
+            <td>20</td>
+            <td bgcolor="grey">35</td>
+        </tr>
+    </table>
+    <br>
     <a href="./index.html">Go back</a>
 </body>
 </html>
